# python-30-days

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/stage1_basics/: lesson01_env_and_diff.md  lesson02_types.md  lesson03_control_flow.md  lesson04_list_tuple.md  lesson05_dict_set.md  lesson06_function.md  lesson07_higher_order.md  lesson08_mini_contact.md
docs/stage2_advanced/: lesson09_module.md  lesson10_file_io.md  lesson11_exception.md  lesson12_oop_basic.md  lesson13_oop_inherit.md  lesson14_iter_generator.md  lesson15_decorator.md  lesson16_oop_contact.md
docs/stage3_engineering/: lesson17_typing.md  lesson18_stdlib.md  lesson19_venv_deps.md  lesson20_pytest.md  lesson21_logging.md  lesson22_http.md  lesson23_database.md  lesson24_concurrency.md
docs/stage4_project/: lesson25_read_code.md  lesson26_crawler.md  lesson27_fastapi.md  lesson28_integration.md  lesson29_quality.md  lesson30_review.md
exercises/lesson01/: README.md  exercise2_show_env.py
exercises/lesson02/: README.md
exercises/lesson03/: README.md
exercises/lesson04/: README.md
exercises/lesson05/: README.md
exercises/lesson06/: README.md
exercises/lesson07/: README.md
exercises/lesson08/: README.md
exercises/lesson09/: README.md
exercises/lesson10/: README.md
exercises/lesson11/: README.md
exercises/lesson12/: README.md
exercises/lesson13/: README.md
exercises/lesson14/: README.md
exercises/lesson15/: README.md
exercises/lesson16/: README.md
exercises/lesson17/: README.md
exercises/lesson18/: README.md
exercises/lesson19/: README.md
(+68 files in other folders)
