[project]
name = "python-30-days"
version = "0.1.0"
description = "Python 30 天系统学习计划（面向有 C 基础的学员）"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests", "solutions"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"
